--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@
 # misc
 .DS_Store
 ios/TXRNTest.xcworkspace/xcuserdata/chenxiaojie.xcuserdatad/UserInterfaceState.xcuserstate
+ios/TXRNTest.xcworkspace/xcuserdata/chenxiaojie.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 npm-debug.log*
 yarn-error.log
