--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ ios/TXRNTest.xcworkspace/xcuserdata/chenxiaojie.xcuserdatad/UserInterfaceState.x
 ios/TXRNTest.xcworkspace/xcuserdata/chenxiaojie.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 npm-debug.log*
 yarn-error.log
+
+# 并未生效，原因是.gitignore只能忽略那些原来没有被track的文件，如果某些文件已经>被纳入了版本管理中，则修改.gitignore是无效的。那么解决方法就是先把本地缓存删除（改变成未track状态），然后再提交:
+# git rm -r --cached .
+# git add .
+# git commit -m'update .gitignore'
+# /* 参考文章: https://www.cnblogs.com/kevingrace/p/5690241.html */
