--- a/ios/TXRNTest/Info.plist
+++ b/ios/TXRNTest/Info.plist
@@ -6,6 +6,8 @@
 	<dict>
 		<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 		<true/>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
