--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "^0.68.2"
+    "react-native": "^0.68.2",
+    "react-native-webview": "^11.22.4"
   }
 }
