--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "^0.68.2",
+    "react-native-swiper": "^1.6.0",
     "react-native-webview": "^11.22.4"
   }
 }
