--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "yarn react-native start"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "react": "17.0.2",
@@ -13,6 +14,7 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.22.4"
   }
 }
